modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/enum_duplicate_bad_method.gd
enum Enum {V1, V2}

func test():
	var Enum2 = Enum
	Enum2.clear()
